// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RowToggler /> should render without errors when closed 1`] = `
.c0 {
  border: 0;
  padding: 0 16px;
  outline: 0;
  background: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  display: none;
}

.c0:focus {
  outline: none;
}

.c0.icon-button--last {
  padding-left: 16px;
  padding-right: 0;
}

.c0 > * {
  pointer-events: none;
}

@media screen and (min-width:768px) {
  .c0 {
    display: block;
  }

  .c0.button--expanded,
  .c0.button--collapsed {
    -webkit-transition: all 0.1s linear;
    transition: all 0.1s linear;
  }

  .c0.button--expanded {
    -webkit-transform: rotate(-180deg);
    -ms-transform: rotate(-180deg);
    transform: rotate(-180deg);
  }
}

<button
  aria-expanded="false"
  aria-label="Expand Row"
  class="button--expand-or-collapse button--collapsed c0"
  data-index="3"
  role="button"
  size="45"
  type="button"
>
  <svg
    fill="#1f262d"
    height="15"
    viewBox="0 0 15 7"
    width="15"
  >
    <path
      d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
    />
  </svg>
</button>
`;

exports[`<RowToggler /> should render without errors when open 1`] = `
.c0 {
  border: 0;
  padding: 0 16px;
  outline: 0;
  background: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  display: none;
}

.c0:focus {
  outline: none;
}

.c0.icon-button--last {
  padding-left: 16px;
  padding-right: 0;
}

.c0 > * {
  pointer-events: none;
}

@media screen and (min-width:768px) {
  .c0 {
    display: block;
  }

  .c0.button--expanded,
  .c0.button--collapsed {
    -webkit-transition: all 0.1s linear;
    transition: all 0.1s linear;
  }

  .c0.button--expanded {
    -webkit-transform: rotate(-180deg);
    -ms-transform: rotate(-180deg);
    transform: rotate(-180deg);
  }
}

<button
  aria-expanded="true"
  aria-label="Collapse Row"
  class="button--expand-or-collapse button--expanded c0"
  data-index="1"
  role="button"
  size="45"
  type="button"
>
  <svg
    fill="#1f262d"
    height="15"
    viewBox="0 0 15 7"
    width="15"
  >
    <path
      d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
    />
  </svg>
</button>
`;
